[project]
name = "org-catalog"
version = "0.1.0"
description = "REST API for an organization catalog"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Org Catalog Dev Team" }
]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.1",
  "pydantic>=2.7.1",
  "pydantic-settings>=2.2.1",
  "python-multipart>=0.0.9",
  "asyncpg>=0.29",
  "greenlet>=3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "asgi-lifespan>=2.1",
  "testcontainers[postgres]>=4.13.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.uv.sources]
org-catalog = { path = "src/org_catalog" }


[tool.ruff]
target-version = "py311"
line-length = 100
select = [
  "E",
  "F",
  "I",
  "B",
  "W",
  "UP",
  "D"
]
ignore = [
  "D104",
  "D107"
]

[tool.ruff.per-file-ignores]
"tests/*" = ["D"]
